kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-101
  labels:
    app: k8s-101
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: k8s-101
